--- a/index.html
+++ b/index.html
@@ -3,34 +3,30 @@
 <head>
     <meta charset="utf-8" />
     <title>Run Buddy</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
-    
 <body>
-<!-- navigation -->
     <header>
         <h1>
-            <a href="/">RUN BUDDY</a>
+          <a href="/">RUN BUDDY</a>
         </h1>
         <nav>
-<!-- Unordered list element -->
-        <ul>
-<!-- List item element -->
-        <li>
-<!-- Anchor element --> 
-        <a href="#what-we-do">What We Do</a> 
-        </li>
-        <li>
-        <a href="#what-you-do">What You Do</a>
-        </li>
-        <li> 
-        <a href="#your-trainers">Your Trainers</a>
-        </li>
-        <li>
-        <a href="#reach-out">Reach Out</a>
-        </li>
-    </ul>           
-    </nav>
-    </header>
+          <ul>
+            <li>
+              <a href="#what-we-do">What We Do</a>
+            </li>
+            <li>
+              <a href="#what-you-do">What You Do</a>
+            </li>
+            <li>
+              <a href="#your-trainers">Your Trainers</a>
+            </li>
+            <li>
+              <a href="#reach-out">Reach Out</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
 
 <!-- hero/jumbotron -->
     <section>
@@ -62,3 +58,4 @@
     </footer>
     
 </body>
+</html>
