--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         <!-- List item element-->
         <li>
           <!-- Anchor element -->
-          <a href="#what-we-do">What We Do</a>
+          <a href="./index.html#what-we-do">What We Do</a>
         </li>
         <li>
-          <a href="#what-you-do">What You Do</a>
+          <a href="./index.html#what-you-do">What You Do</a>
         </li>
         <li>
-          <a href="#your-trainers">Your Trainers</a>
+          <a href="./index.html#your-trainers">Your Trainers</a>
         </li>
         <li>
-          <a href="#reach-out">Reach Out</a>
+          <a href="./index.html#reach-out">Reach Out</a>
         </li>
       </ul>
     </nav>
@@ -38,7 +38,7 @@
 
   <!-- hero/jumbotron -->
   <section class="hero">
-    <div class="hero-form">
+    <div class="hero hero-secondary">
       <h3>Get Started Today</h3>
       <p>Fill out this form and one of our trainers will schedule a consult</p>
       <form>
