--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <!-- navigation -->
   <header>
     <h1>
       <a href="/">
@@ -20,16 +21,16 @@
         <!-- List item element-->
         <li>
           <!-- Anchor element -->
-          <a href="./index.html#what-we-do">What We Do</a>
+          <a href="#what-we-do">What We Do</a>
         </li>
         <li>
-          <a href="./index.html#what-you-do">What You Do</a>
+          <a href="#what-you-do">What You Do</a>
         </li>
         <li>
-          <a href="./index.html#your-trainers">Your Trainers</a>
+          <a href="#your-trainers">Your Trainers</a>
         </li>
         <li>
-          <a href="./index.html#reach-out">Reach Out</a>
+          <a href="#reach-out">Reach Out</a>
         </li>
       </ul>
     </nav>
@@ -37,9 +38,12 @@
 
   <!-- hero/jumbotron -->
   <section class="hero">
-    <div class="hero hero-secondary">
-      <h3>Get Started Today</h3>
-      <p>Fill out this form and one of our trainers will schedule a consult</p>
+    <div class="hero-cta">
+      <h2>Start Building Habits.</h2>
+      <p>
+        seitan heirloom post-ironic pop-up iPhone mlkshk hella selfies fashion axe occupy readymade put a bird on it messenger bag Wes Anderson Schlitz plaid Bushwick church-key lo-fi skateboard slow-carb hashtag trust fund Williamsburg biodiesel fixie farm-to-table 8-bit banjo XOXO Banksy chillwave bicycle rights retro cliche tattooed bespoke irony mumblecore Shoreditch deep v polaroid McSweeney's bitters cray gentrify tofu Marfa you probably haven't heard of them yr banh mi asymmetrical art party selvage letterpress High Life.
+      </p>
+    </div>    
       <form>
         <label for="name">Enter full name:</label>
         <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" />
@@ -185,7 +189,7 @@
   <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
     <div>
-      <a href="#">Read Our Privacy Policy</a><br />
+      <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
       &copy; 2019 Run Buddy, Inc.
     </div>
   </footer>
