--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -2,44 +2,45 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Privacy Policy - Run Buddy</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/secondary-styles.css" />
-</head>
+    <title>Run Buddy - Privacy Policy</title>
   </head>
   <body>
-      <!-- navigation -->
-  <header>
-    <h1>
-      <a href="/">
-        RUN BUDDY
-      </a>
-    </h1>
-    <nav>
-      <!-- Unordered list element -->
-      <ul>
-        <!-- List item element-->
-        <li>
-          <!-- Anchor element -->
-          <a href="./index.html#what-we-do">What We Do</a>
-        </li>
-        <li>
-          <a href="./index.html#what-you-do">What You Do</a>
-        </li>
-        <li>
-          <a href="./index.html#your-trainers">Your Trainers</a>
-        </li>
-        <li>
-          <a href="./index.html#reach-out">Reach Out</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <section class="hero">
+    <header>
+      <h1>
+        <a href="./index.html">RUN BUDDY</a>
+      </h1>
+      <nav>
+        <ul>
+          <li>
+            <a href="./index.html#what-we-do">What We Do</a>
+          </li>
+          <li>
+            <a href="./index.html#what-you-do">What You Do</a>
+          </li>
+          <li>
+            <a href="./index.html#your-trainers">Your Trainers</a>
+          </li>
+          <li>
+            <a href="./index.html#reach-out">Reach Out</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <!-- end navigation -->
 
-  </section>
-  <article class= "secondary-content">
-    <p>
+    <!-- hero/jumbotron -->
+    <section class="hero">
+      <h2 class="page-title">
+        Privacy Policy
+      </h2>
+    </section>
+
+    <!-- body copy -->
+    <article class="secondary-content">
+      <p>
         Website Terms of Use
       </p>
 
@@ -457,15 +458,17 @@
       <p>
         Email: info@runbuddy.io
       </p>
+    </article>
 
-  </article>
-  </body>
     <!-- footer -->
-  <footer>
-    <h2>❤️ Made with love by Run Buddy.</h2>
-    <div>
-      <a href="#">Read Our Privacy Policy</a><br />
-      &copy; 2019 Run Buddy, Inc.
-    </div>
-  </footer>
+    <footer>
+      <h2>❤️ Made with love by Run Buddy.</h2>
+
+      <div>
+        <a href="./privacy-policy.html">Read Our Privacy Policy</a> <br/>
+        &copy; 2019 Run Buddy, Inc.
+      </div>
+    </footer>
+    <!-- footer end -->
+  </body>
 </html>
